# vn_stock_value_investor

./: .env.example  .gitignore  README.md  README_STREAMLIT.md  final_decision.json  fix_env.py  fundamental_analysis.md  market_analysis.md  pyproject.toml  requirements-streamlit.txt  run_streamlit.py  set_models.py  setup_and_run.py  streamlit_app.py  technical_analysis.md  test_brave_direct.py  test_brave_final.py  test_brave_search.py  test_brave_simple.py  test_brave_working.py  test_env.py  test_ratios.py
src/vn_stock_advisor/: crew.py  main.py
src/vn_stock_advisor/tools/: brave_search_tool.py  custom_tool.py
